--- a/doc/Deliverables/BW4T3Instructions/EnvironmentStore/EnvStoreDoc.tex
+++ b/doc/Deliverables/BW4T3Instructions/EnvironmentStore/EnvStoreDoc.tex
@@ -150,11 +150,9 @@ The New-, Open...-, Save- and Save as...-options are the standard file operation
 \subsection{Tools menu}
 The other drop down menu at the top of the map editor is the tools menu (Figure \ref{fig:DropDownTools}). This menu contains options to use several tools.
 
-
-
 Clicking on the 'Randomize Zones' option creates a random map, based off a vanilla map with reclassification of rooms to blockades, charge zones or corridors, and with reclassifications of existing corridors to charge zones. The map is always solvable, given that all the blocks in the sequence are present in the map and no further changes are made to the map. The 'Randomize Blocks' option randomizes the blocks contained in every room according to parameters that the user has to specify. Figure 	\ref{fig:MenuBlocks} shows the menu.
 
-This interface allows the user to specify which block colors they want to be spawned, and also the max. amount of blocks in a room. The interface for random sequence generation is slightly different (Figure ref{fig:MenuSeq}).
+This interface allows the user to specify which block colors they want to be spawned, and also the max. amount of blocks in a room. The interface for random sequence generation is slightly different (Figure \ref{fig:MenuSeq}).
 
 
 
@@ -169,7 +167,7 @@ It is also possible to manually edit a map as it is a plain text XML file.
 \item You can change the number of rooms by adding or removing $<$zones$>$ of type ROOM and position the rooms correctly on the map by editing the $<$x$>$ $<$y$>$ $<$width$>$ and $<$height$>$ inside the room's $<$boundingbox$>$. Also you need to add a $<$door$>$ properly positioned on the border of the room.
 \item You can edit the goal sequence by adding $<$sequence$>$ items to the map, with colors as mentioned above.
 \item You can prevent multiple entities to enter corridor zones by putting true in the item $<$oneBotPerCorridorZone$>$ in the map.
-\item You can add entities to the environment by creating more $<$entities$>$ items. Make sure they have a unique $<$name$>$ and that their start position is in a different $<$zone$>$ if you have $<$oneBotPerCorrridorZone$>$ set to true.
+\item You can add entities to the environment by creating more $<$entities$>$ items. Make sure they have a unique $<$name$>$ and that their start position is in a different $<$zone$>$ if you have $<$oneBotPerCoridorZoneidorZone$>$ set to true.
 \item You can let the server pick a random sequence of a given length by setting the $<$randomSequence$>$ to a positive value. These random blocks are added to the existing sequence items and the random blocks are placed randomly on the map.
 \item You can let the server pick random extra blocks to be placed in the rooms on the map by putting a positive number in the $<$randomBlocks$>$ in the map. Note that this addition is on top of all blocks that are already placed in the map; so normally you leave the room zones empty when using this option.
 \item You can set per-zone visibility of the zone namelabel in the server map renderer, using a $<$renderOptions$>$ $<$labelVisible$>$ false $</$labelVisible$>$ $</$renderOptions$>$ block to disable visibility.
