--- a/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
+++ b/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
@@ -3,7 +3,7 @@
 
 
 \subsection{Introduction}
-This document describes how to make use of the Scenario Editor (Figure \ref{ScenarioEditor}). When you open the editor, you see two main parts:
+This chapter describes how to make use of the Scenario Editor (Figure \ref{ScenarioEditor}). When you open the editor, you see two main parts:
 \begin{enumerate}
 \item The Configuration panel, which is used to create, open and save configuration files.
 \item The Entity panel, where a list of bots and a list of e-partners are being displayed. Here you can create, modify, rename and delete bots and e-partners.
@@ -18,7 +18,7 @@ This document describes how to make use of the Scenario Editor (Figure \ref{Scen
 \end{figure}
 
 \subsection{General use}
-At the top of the editor you can see a $File$ menu. If you click on that, you get the options to create a new configuration,open a configuration, save your configuration, export your configuration and to exit the editor.
+At the top of the editor you can see a $File$ menu. If you click on that, you get the options to create a new configuration, open an existing configuration, save your configuration, export your configuration and to exit the editor.
 
 On the left side of the editor you can configure a scenario as you like. The Client IP, the Client Port, the Server IP and the Server Port should already contain the default values. You can change them if you need to. You can also indicate whether you want to open a GUI, visualise the paths the bots take or enable collisions. If you have a map file you want to use, you can import it by selecting the $Open$ $file$ button at the right section.
 
