--- a/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
+++ b/doc/Deliverables/BW4T3Instructions/ScenarioEditor/ScenarioEditorManual.tex
@@ -62,6 +62,8 @@ To save your configuration in a new file, select $File$ $\to$ $Save$ $As$ in the
 \item{Export configuration to mas2g}:
 To export your configuration to mas2g, you have to have saved your configuration first. Once you have done that, select $File$ $\to$ $Export$ $as$ $MAS$ $project$ in the menu bar. A window will pop up where you can select the folder you want to export the configuration to and the file name you want to use. Once you have selected the right folder and entered the file name, click the $Export$ $MAS$ $project$ button.
 
+\emph{WARNING}: we recommend to use a relative file path to the configuration file. But currently, the generated mas2g file will contain an absolute path reference to the config file. We strongly recommend to fix the file reference in the mas2g file manually for cross-platform compatibility (so that others can also run your $MAS$).
+
 \item{Exit the Scenario Editor}:
 If you want to close the Scenario Editor, select $File$ $\to$ $Exit$ in the menu bar. Closing the Scenario Editor will not save any changes you have made, so make sure you save your configuration first if you want to keep it.
 \end{itemize}
