#3046 added SPEED parameter to the BW4T3 instruction document.

--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -181,6 +181,10 @@ In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE o
     The map name to be loaded. If you specify a map, the server will reset to load the new map, which disconnects all entities.
      
 \item    
+    SPEED(""):
+    The speed (fps) at which the simulation runs on the server. Must be between 5 and 100. If left empty, the server will keep its current setting.
+
+\item    
     LOG("ERROR"):
     The log4j log level to be used. Available values: OFF, FATAL, ERROR, WARN, INFODEBUG and ALL.
 
