#4025 refer to MapEditor for changing #entities on map

--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -144,7 +144,7 @@ In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE o
 
 \item
     AGENTCOUNT("0"):
- the amount of agents (also specified in the launchpolicy section, see below), that the client should load. If the agentcount is higher than the amount of entities in the map then they won't be loaded. (default: 0).. 
+ the amount of agents (also specified in the launchpolicy section, see below), that the client should load. If the agentcount is higher than the amount of entities in the map then they won't be loaded. (default: 0). You can use the map editor (Chapter \ref{MapEditor}) to change the amount of entities on the map. 
     
 \item
     LAUNCHGUI("true"):
@@ -153,7 +153,7 @@ In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE o
 
 \item
     HUMANCOUNT("1"):
-    the amount of human players that should be loaded. If the humancount is higher than the amount of entities in the map then they won't be loaded. 
+    the amount of human players that should be loaded. If the humancount is higher than the amount of entities in the map then they won't be loaded. You can use the map editor (Chapter \ref{MapEditor}) to change the amount of entities on the map. 
 
 \item
     AGENTCLASS("nl.tudelft.bw4t.client.agent.BW4TAgent"):
