--- a/doc/src/main/sources/BW4T3Instructions/EnvironmentStore/EnvStoreDoc.tex
+++ b/doc/src/main/sources/BW4T3Instructions/EnvironmentStore/EnvStoreDoc.tex
@@ -1,6 +1,6 @@
 \newpage
 
-\section{Map Editor}
+\section{Map Editor}\label{MapEditor}
 This section describes how you can edit existing maps or create new maps from scratch. This can be done with a editing tool, or by directly editing the map files manually.
 
 
