#4024 clarified client startup procedures

--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -102,9 +102,13 @@ These are all the  options for the server:
 \end{itemize}
 
 \section{Running the client (Human Controlled Bot)}
-Before running the client, make sure you have already started the server. Start (e.g., double click) the client.jar in $<$CLIENT$>$. Figure \ref{fig:Client} will show up and the bot is automatically added to the server. You can now control the bot by clicking (left or right) at different spots in the Client. Please refer to Section  \ref{ch:usingHI} for details on using the this client.
+Before running the client, make sure you have already started the server. 
 
-Notice: if you run both agents and human controlled bots, you should use the HUMANGUI option and launch the human GUIs in coordination with the agent platform. Please refer to the Advanced run settings below.
+To manually start a human GUI without an agent platform, start (e.g., double click) the client.jar in $<$CLIENT$>$. Figure \ref{fig:Client} will show up and the bot is automatically added to the server. You can now control the bot by clicking (left or right) at different spots in the Client. 
+
+To run both agents and human controlled bots, you should use the HUMANGUI option and launch the human GUIs in coordination with the agent platform. Please refer to the Advanced run settings below.
+
+Please refer to Section  \ref{ch:usingHI} for details on using the this client.
 
 \begin{figure}[!h]
 \begin{center}
