#4022 added current date to document

--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -20,8 +20,10 @@
     {\bfseries\Large
         BW4T3 Instructions\\
         \vskip2cm
-        W. Pasman, M. B. van Riemsdijk, \\
-    }    
+        W. Pasman, M. B. van Riemsdijk\\
+    } 
+    \vskip1cm
+    \today   
     \vfill
     \includegraphics[width=4cm]{TUD.png}
     \vfill
