--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -95,15 +95,15 @@ The server will now start using the new values.
 
 These are all the  options for the server:
 \begin{itemize}
-\item -scenario The path to the scenario folder required by repast. Default is BW4T.rs. We recommend to not change this.  
-\item -map the name of the map file in the /maps/ folder (which is created at startup if it does not yet exist). Default is 'Random'. These are xml files that you can create and edit with the map editor.
-\item -serverip The ip to bind this server to. Default is 'localhost'. If you change the serverip and/or serverport, change the client settings correspondingly (see below). 
-\item -serverport  The port to bind this server to. Default is 8000. You can change this if there already is another service on your machine using the default port. Make sure that you also set up the client accordingly if you change this. Notice that usually ports below 1023 require admin rights.
-\item -msg the message to be made available to the clients.
-\item -gui true if GUI should be enabled, false if server should run without GUI. Defaults to true. Setting this to false  may be useful particularly for batch runs.
-\item -key The key necessary to remotely kill the server
-\item -collision tue enables collision checking between bots in the environment. Defaults to false. Note that collision checking still has some issues.
-\item -paths True if draw paths is enabled. This allows you to see planned paths for entities.
+\item $-repast$ The path to the resources folder required by Repast \footnote{Repast is a subsystem used by the server to handle the actual simulations. \url{http://repast.sourceforge.net} }. Default is BW4T.rs. We recommend to not change this.  
+\item $-map$ the name of the map file in the /maps/ folder (which is created at startup if it does not yet exist). Default is 'Random'. These are xml files that you can create and edit with the map editor.
+\item $-serverip$ The ip to bind this server to. Default is 'localhost'. If you change the serverip and/or serverport, change the client settings correspondingly (see below). 
+\item $-serverport$  The port to bind this server to. Default is 8000. You can change this if there already is another service on your machine using the default port. Make sure that you also set up the client accordingly if you change this. Notice that usually ports below 1023 require admin rights.
+\item $-msg$ the message to be made available to the clients.
+\item $-gui$ true if GUI should be enabled, false if server should run without GUI. Defaults to true. Setting this to false  may be useful particularly for batch runs.
+\item $-key$ The key necessary to remotely kill the server
+\item $-collision$ tue enables collision checking between bots in the environment. Defaults to false. Note that collision checking still has some issues.
+\item $-paths$ True if draw paths is enabled. This allows you to see planned paths for entities.
 \end{itemize}
 
 \section{Running the client (Human Controlled Bot)}
