--- a/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/src/main/sources/BW4T3Instructions/BW4T3_instructions.tex
@@ -113,7 +113,7 @@ To manually start a human GUI without an agent platform, start (e.g., double cli
 
 To run both agents and human controlled bots, you should use the HUMANGUI option and launch the human GUIs in coordination with the agent platform. Please refer to the Advanced run settings below.
 
-Please refer to Section  \ref{ch:usingHI} for details on using the this client.
+Please refer to Section  \ref{ch:usingHI} for details on using this client.
 
 \begin{figure}[!h]
 \begin{center}
@@ -124,15 +124,11 @@ Please refer to Section  \ref{ch:usingHI} for details on using the this client.
 
 
 \section{Running the client (Agent Controlled Bot)}
-Before running the client, make sure you have already started the server. Start your favourite Agent platform and load run the MAS. If you use GOAL, this means open the .mas2g file and press the run button. This time, no new windows will appear. The agent will control your bot,  and agent behaviours can be seen only by introspecting the agents with your agent platform tools. In the server window you will see your bot(s) move according to the rules applied in the .goal file(s).
+Before running the client, make sure you have already started the server. Start your favourite Agent platform, load and run the MAS. If you use GOAL, this means open the agent program (e.g., the bw4t.mas2g example) and press the run button. This time, no new windows will appear. The agent will control your bot,  and agent behaviours can be seen only by introspecting the agents with your agent platform tools. In the server window you will see your bot(s) move according to the programs.
 
-\subsection{Advanced run settings}
+\subsection{Advanced client settings}
 \label{sec:clientadvancedrunsettings}
-The following MAS init parameters are available (the default values are shown inside the brackets). These init parameters should be placed inside the config.xml file. 
-
-The HUMANGUI option is needed if you have a human GUI connected with an agent (and the agent should receive percepts as well).
-
-In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE option is the only needed option in the MAS file, if you use a config file.  
+The following environment init parameters are available to the clients (the default values are shown inside the brackets). These init parameters can be used inside your agent program (e.g., in your GOAL mas2g file), or used inside the config.xml file. 
 
 \begin{itemize}
 \item
@@ -141,7 +137,6 @@ In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE o
 
 \item
     CLIENTPORT("2000"):   The port that the client listens to. 
-
 
 \item
     SERVERIP("localhost"):
@@ -153,16 +148,16 @@ In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE o
 
 \item
     AGENTCOUNT("0"):
- the amount of agents (also specified in the launchpolicy section, see below), that the client should load. If the agentcount is higher than the amount of entities in the map then they won't be loaded. (default: 0). You can use the map editor (Chapter \ref{MapEditor}) to change the amount of entities on the map. 
+ the amount of entities that should be of the 'bot' type. This type of entities needs to be controlled from an agent program. If the agentcount is higher than the amount of entities in the map then they won't be loaded. (default: 0). You can use the map editor (Chapter \ref{MapEditor}) to change the amount of entities on the map. 
     
 \item
     LAUNCHGUI("true"):
-    whether to launch a separate GUI for each bot (controlled by an agent or human) can be set to true or false. This GUI shows the environment from the perspective of the bot. (default:false).When this option is used, the human GUI is connected with the agent platform. A special agent in the agent platform can then communicate with the HumanGUI using entity actions that are available specifically for this purpose. This way, a human player can be a fully qualified player in the agent platform (e.g., use the native communication mechanisms in the agent platform).
-
-
+    whether to launch a separate GUI for bot controlled by agents. This GUI shows the environment from the perspective of the bot. When this option is used, the human GUI is connected with the agent platform. 
+        
 \item
     HUMANCOUNT("1"):
-    the amount of human players that should be loaded. If the humancount is higher than the amount of entities in the map then they won't be loaded. You can use the map editor (Chapter \ref{MapEditor}) to change the amount of entities on the map. 
+    the amount of entities that should be of 'human' type. This type of entities are controlled by a human using a GUI. If the humancount is higher than the amount of entities in the map then they won't be loaded. You can use the map editor (Chapter \ref{MapEditor}) to change the amount of entities on the map. The GUI (chapter \ref{ch:usingHI}) is launched automatically for each entity of this type. The behaviour of the GUI however depends on the setting of the GOALHUMAN setting.
+
 
 \item
     AGENTCLASS("nl.tudelft.bw4t.client.agent.BW4TAgent"):
@@ -179,11 +174,15 @@ In GOAL these settings can be changed also from the mas2g file. The CONFIGFILE o
  
 \item
     CONFIGFILE(""):
-    The file from which the client reads the configuration. This is an xml file that can be generated with the scenario editor. The file is read relative to the directory containing the client environment jar file, unless you use an absolute path. It is recommended to place the xml relative to the client environment location, and not use an absolute path. WARNING: currently the scenario editor exports MAS files with absolute paths. You need to fix this manually.
+    The file from which the client reads the configuration. This is an xml file that can be generated with the scenario editor. The file is read relative to the directory containing the client environment jar file, unless you use an absolute path. It is recommended to place the xml relative to the client environment location, and not use an absolute path. If you use a config file option in your agent program, you can specify all other options you need in the config file. WARNING: currently the scenario editor exports MAS files with absolute paths. You need to fix this manually.
  
 \item
     GOALHUMAN("false"):
-    Forces the use of the human GUI with an GOAL agent to translate the commands. You should turn on this option if you have a human GUI but still want the agent to receive the percepts.
+    Determines the behaviour of all GUIs that are connected with 'human' type entities (see the HUMANCOUNT option above).
+    \begin{itemise}
+    \item false: the GUI translates commands given in the GUI directly to entity actions and sends them to the server. Entities of type 'human' are never reported as free entities to the agent platform. 
+    \item true: entities of the type 'human' are reported to the agent platform. The GUI translates the commands given in the GUI to percepts and are sent to the agent. These special percepts are only available from the GUI and are marked as such in the BW4T specification document. The agent receives these percepts and now must translate them (at its own discretion) to actions. The actions taken by the agent are sent to the server. 
+  You should turn on this option if you have a human GUI but still want the agent to receive the percepts. The bw4thuman example shows how this works with GOAL.
 
 \item
     MAP(""):
